[package]
name = "keyring-service"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = "=1.7.0"
sails-rs = "=0.7.1"
parity-scale-codec = { version = "3.6", default-features = false }
scale-info = { version = "2.11.6", default-features = false }

[dev-dependencies]
gtest = "=1.7.0"
gear-core = "=1.7.0"
